/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package greet;

option go_package = "github.com/apache/dubbo-go-samples/helloworld-dubbo-gen/proto;greet";

import "hessian2_extend/hessian2_extend.proto";

message GreetRequest {
  string name = 1;
  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.GreetRequest";
  };
}

message GreetResponse {
  string greeting = 1;
  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.GreetResponse";
  };
}

message Greet2Request {
  string name = 1;
  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.Greet2Request";
  };
}

message Greet2Response {
  string greeting = 1;
  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.Greet2Response";
  };
}

message Greet3Request {
  string name = 1;
  int32 age = 2;

  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.Greet3Request";
    extend_args: true;
  };
}

message Greet3Response {
  string greeting = 1;

  option (hessian2_extend.message_extend) = {
    java_class_name: "org.apache.dubbo.springboot.demo.Greet3Response";
    extend_args: true;
  };
}

service GreetService {
  option (hessian2_extend.service_extend) = {
    interface_name: "org.apache.dubbo.springboot.demo.GreetProvider";
  };
  rpc Greet(GreetRequest) returns (GreetResponse) {
    option (hessian2_extend.method_extend) = {
      method_name: "greet";
    };
  }
  rpc Greet2(Greet2Request) returns (Greet2Response) {
    option (hessian2_extend.method_extend) = {
      method_name: "greet";
    };
  }
  rpc Greet3(Greet3Request) returns (Greet3Response) {
    option (hessian2_extend.method_extend) = {
      method_name: "greet";
    };
  }
}